tests/tmytests/good/lcse_set.lat
class A {
    int a;
    int b;
}

int main() {
    A a = new A;

    int r = readInt();

    int x = r + 1;
    a.a = 1 + r;
    a.b = r / 2;
    int y = r / 2;

    printInt(a.a);
    printInt(a.b);
    printInt(x);
    printInt(y);

    return 0;
}