tests/tmytests/bad/method_collision_1.lat
class Collision {
    int a;
    int b;
    
    int dummy() {
        return 42;
    }

    void doBadStuff(int x) {
        printInt(x);
    }

    void doBadStuff(int x, int y) {
        printInt(x);
        printInt(y);
    }
}

int main() {
    return 0;
}